# excel2img

./: .gitignore  .travis.yml  LICENSE  MANIFEST  README  README.md  README.rst  excel2img.py  requirements.txt  setup.cfg  setup.py
excel2img/: __init__.py  excel2img.py
tests/: test.xlsx  test_excel2img.py
