[metadata]
name = excel2img
description = Save ranges from Excel documents as images
description-file = README.rst
author = Alexey Gadyukov
author_email = glexey@gmail.com
home-page = https://github.com/glexey/excel2img 
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Documentation
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Office/Business :: Office Suites
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

